--- a/RRCP1.Rmd
+++ b/RRCP1.Rmd
@@ -1,14 +1,38 @@
-Loading and Processing the data
+Reproducible Research Course Project1
+=============================================
+
+## Loading the required packages
+
+we need ggplot2 for plotting
+
+```{r results='hide', cache=TRUE, message=FALSE, warning=FALSE}
+library(dplyr)
+library(ggplot2)
+```
+
+
+## Loading and Processing the data
 
 we will check if the file existor not and then load the dataset
 
-```{r}
-library(dplyr)
-if(!file.exists("./data")){dir.create("./data")}
+```{r cache=TRUE}
+if(!file.exists("./data"))
+{
+        dir.create("./data")
+}
 fileUrl <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
 download.file(fileUrl,destfile="./data/activity.zip",method="curl")
 
 unzip(zipfile="./data/activity.zip",exdir="./data")
 activity <- read.csv("./data/activity.csv")
-activity
+activity$date <- as.Date(activity$date)
 ```
+
+## Calculating the mean total number of steps taken per day
+
+1.The total number of steps taken per day
+
+```{r}
+StepsPerDay <- activity %>% group_by(date) %>% summarize(sumsteps = sum(steps,na.rm = T))
+```
+
