--- a/RRCP1.Rmd
+++ b/RRCP1.Rmd
@@ -5,9 +5,10 @@ Reproducible Research Course Project1
 
 we need ggplot2 for plotting
 
-```{r results='hide', cache=TRUE, message=FALSE, warning=FALSE}
+```{r message=FALSE, warning=FALSE, cache=TRUE, results='hide'}
 library(dplyr)
 library(ggplot2)
+library(magrittr)
 ```
 
 
@@ -35,4 +36,125 @@ activity$date <- as.Date(activity$date)
 ```{r}
 StepsPerDay <- activity %>% group_by(date) %>% summarize(sumsteps = sum(steps,na.rm = T))
 ```
+
+2.Histogram of total number of steps taken each day
+
+```{r}
+hist(StepsPerDay$sumsteps, main = "Histogram of steps taken daily",
+     xlab = "Number of Steps", ylim = c(0,40), col = "red")
+
+```
+
+3.Calculate and report the mean and median of the total number of steps taken per day
+
+```{r}
+Mean1 = mean(StepsPerDay$sumsteps)
+Median1 = median(StepsPerDay$sumsteps)
+
+print(paste("mean = ",Mean1))
+print(paste("meadian = ",Median1))
+
+```
+
+## Analyzing the average daily activity pattern
+
+1. Time series plot
+
+```{r}
+stepsPerInterval <- activity %>%
+        group_by(interval) %>%
+        summarize(meansteps = mean(steps, na.rm = TRUE)) 
+head(stepsPerInterval)
+
+plot(stepsPerInterval$meansteps ~ stepsPerInterval$interval, type = "l", 
+     col = "red", xlab = "5 minute interval", ylab = "average steps", 
+     main = "Steps by Time interval")
+```
+
+2.Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r}
+print(paste("Interval containing the most steps on average: " ,stepsPerInterval$interval[which.max(stepsPerInterval$meansteps)]))
+```
+
+## Imputing missing values
+
+1.Calculate and report the total number of missing values in the dataset
+
+```{r}
+mv = sum(is.na(activity$steps))
+print(paste("Total number of missing values :",mv))
+```
+
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+```{r}
+
+ReplaceWithMean <- function(x) replace(x,is.na(x), mean(x,na.rm = T))
+
+MeanData <- activity %>% group_by(interval) %>% 
+              mutate(steps = ReplaceWithMean(steps))
+
+head(MeanData) # new dataset with filled missing values
+```
+
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+```{r}
+stepsPerDay <- MeanData %>%
+        group_by(date) %>%
+        summarize(sumsteps = sum(steps, na.rm = TRUE)) 
+head(stepsPerDay,10)
+
+hist(stepsPerDay$sumsteps, main = "Histogram of Steps taken daily", 
+     col="green", xlab="Steps")
+
+MeanWithoutNA <- mean(stepsPerDay$sumsteps)
+MedianWithoutNA <- median(stepsPerDay$sumsteps)
+
+print(paste("mean without NA= ",MeanWithoutNA))
+print(paste("meadian without NA= ",MedianWithoutNA))
+
+NACompare <- data.frame(mean_ = c(Mean1,MeanWithoutNA),median_ = c(Median1,MedianWithoutNA))
+rownames(NACompare) <- c("Pre NA Transformation", "Post NA Transformation")
+print(NACompare)
+```
+
+
+## Are there differences in activity patterns between weekdays and weekends?
+
+1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+
+```{r}
+MeanData$date <- as.Date(MeanData$date)
+MeanData$weekday <- weekdays(MeanData$date)
+MeanData$weekend <- ifelse(MeanData$weekday=="Saturday" | MeanData$weekday=="Sunday", "Weekend", "Weekday" )
+
+
+```
+
+2. Panel plot containing time series plot of the 5-min interval and the average number of steps taken averaged across all weekdays or weekend days
+
+```{r}
+meandataweekendweekday <- aggregate(steps ~ interval + weekend  ,data =  MeanData,mean)
+
+ggplot(meandataweekendweekday, aes(interval, steps)) + 
+        geom_line() + 
+        facet_grid(weekend ~ .) +
+        xlab("5-minute intervals") + 
+        ylab("Avarage number of steps taken") +
+        ggtitle("Weekdays and weekends activity patterns")
+
+```
+
+
+
+
+
+
+
+
 
